fix(auth): adjust styling of login and registration forms - Fix spacing of containers and divs on the login and registration pages, improving visual layout. - Resolve rendering issue on the forms page when saving information by assigning a new method for handling POST request reading.

--- a/src/main/resources/static/css/form.css
+++ b/src/main/resources/static/css/form.css
@@ -85,6 +85,13 @@ button:disabled {
   cursor: not-allowed;
   background: #ffffff;
 }
+.buttom-form{
+  background-color: white;
+  margin-top: 17px;
+  color: black;
+  width: 100px;
+
+}
 
 .success,
 .error {
@@ -111,3 +118,4 @@ button:disabled {
   justify-content: center;
   align-items: center;
 }
+
